--- a/presentations/leeds.qmd
+++ b/presentations/leeds.qmd
@@ -8,6 +8,7 @@ format:
     toc-depth: 1
     slideNumber: true
     auto: true
+    scrollable: true
 execute:
   enabled: true
   echo: true
@@ -79,7 +80,7 @@ leeds = merged.loc[merged["msoa_name_x"].str.contains("Leeds")]
 #| label: kids-location
 #| echo: false
 
-fig = plot_chloropleth("total_kids_2011", merged, "Leeds")
+fig = plot_chloropleth("total_kids_2011", merged, "Leeds", color_continuous_scale="Viridis")
 fig.show()
 ```
 
@@ -89,7 +90,8 @@ fig.show()
 #| label: kids-u5-location
 #| echo: false
 
-fig = plot_chloropleth("total_ppl_u5_totalpop_prop_2011", merged, "Leeds")
+fig = plot_chloropleth("total_ppl_u5_totalpop_prop_2011", merged, "Leeds",
+color_continuous_scale="Viridis")
 fig.show()
 ```
 
@@ -101,7 +103,7 @@ fig.show()
 - Lead paint was widely used in the UK before 1963. A 1963 agreement required labelling on paint cans with >1% lead, warning people against its use in areas accessible to children.
 - White lead paint was not banned until 1992, so housing built before 1992 still pose lead risks.
 
-## Housing age variables {.smaller .scrollable}
+## Housing age variables {.smaller}
 
 We use the UK Stock of properties data to obtain the proportion of houses built in various intervals. We focus on the following variables:
 
@@ -120,7 +122,7 @@ We use the UK Stock of properties data to obtain the proportion of houses built 
 - Proportion of houses built before 1992
 
 
-## Proportion of houses built before 1992
+## % of houses built before 1992
 
 ```{python}
 #| label: housing-pre-1992-location
@@ -132,7 +134,7 @@ fig.show()
 
 - These were built before a legal ban on lead paint
 
-## Proportion of houses built before 1954
+## % of houses built before 1954
 
 
 ```{python}
@@ -145,7 +147,7 @@ fig.show()
 
 - These are likely to have at least some lead paint
 
-## Proportion of houses built before 1939
+## % of houses built before 1939
 
 ```{python}
 #| label: housing-pre-1939-location
@@ -212,7 +214,7 @@ The variables we use are:
 - IMD health disability score
 - IMD barriers to housing and services score
 
-## Calculation of IMD Income Score {.smaller .scrollable}
+## Calculation of IMD Income Score {.smaller}
 
 - Out-of-work adults and children in families claiming specific benefits.
 - Working individuals with low earnings satisfying means-tested criteria.
@@ -248,7 +250,7 @@ Indicators include:
 
 - This indicator is based on 2015/16–2016/17 emergency hospital admissions lasting over one day and uses age-sex standardised rates with 2016–2017 population estimates while excluding prisoners.
 
-## IMD health disability score [III] {.scrollable}
+## IMD health disability score [III]
 
 4. **Mood and anxiety Disorders**: A composite measure derived from:
   - Prescribing data (from NHS Business Services Authority)
@@ -309,10 +311,8 @@ The IMD overall score combines information from the seven domains to produce an 
 - Children in families with lower incomes have limited access to safer housing leading to longer exposure periods to lead.
 - Our measure for income uses median household income data that is collected from the UK ONS at the MSOA level.
 
-## Location of high incomes
+## Location of high incomes {.smaller}
 
-- The outskirts are richer than the center, especially the north
-- Except for the old town, the center is poorer
 ```{python}
 #| label: high-income-location
 #| echo: false
@@ -320,6 +320,8 @@ The IMD overall score combines information from the seven domains to produce an 
 fig = plot_chloropleth("median_annual_incomeE", merged, "Leeds", color_continuous_scale="Viridis")
 fig.show()
 ```
+- The northern outskirts are richer than the center
+- Except for the old town, the center is poorer
 
 ## Poverty rate data
 - Poverty rate data is collected from the ONS and it reports the proportion of households living below 60% of median income.
@@ -348,7 +350,7 @@ fig.show()
 #| label: poverty-location
 #| echo: false
 
-fig = plot_chloropleth("poverty_rateE", merged, "Leeds", color_continuous_scale="rdylbu")
+fig = plot_chloropleth("poverty_rateE", merged, "Leeds", color_continuous_scale="rdbu_r")
 fig.show()
 ```
 
@@ -362,7 +364,7 @@ fig.show()
 #| label: uneducated-location
 #| echo: false
 
-fig = plot_chloropleth("no_qual_ppl_w_kids_prop_2011", merged, "Leeds")
+fig = plot_chloropleth("no_qual_ppl_w_kids_prop_2011", merged, "Leeds", color_continuous_scale="rdbu_r")
 fig.show()
 ```
 
@@ -376,7 +378,7 @@ fig.show()
 
 - Since moss measurements are extremely sparse and MSOA-level values mostly imputed, we focus on soil lead concentration.
 
-## Soil Lead {.smaller .scrollable}
+## Soil Lead {.smaller}
 
 ::: {.columns}
 ::: {.column width="50%"}
@@ -396,9 +398,13 @@ They
 :::
 
 We then use this 500m grid to compute two measures:
+
 1. **Mean soil lead concentration**: 
+
    - Calculate the average lead concentration for all soil grid cells that intersect each MSOA.
+
 2. **IDW mean soil lead concentration**: 
+
    - Like the previous, but using an inverse distance weighting method to account for the distance between the grid cell and the MSOA centroid.
 
 
@@ -442,7 +448,7 @@ fig.show()
   
 - This was previously done by Public Health England & Imperial College London, with our data we can supercede their work
 
-## Comparison with Public Health England {.smaller .scrollable}
+## Comparison with Public Health England {.smaller}
 
 We have more data, at a more granular level.
 
@@ -450,14 +456,14 @@ We have more data, at a more granular level.
 |---------------------------|------------------|
 | **Level:** LAD            | **Level:** MSOA |
 | **Risk variables:**       | **Risk variables:** |
-| - % houses built pre 1973 | - % houses built pre 1954 |
-| - Index of Multiple Deprivation | - Index of Multiple Deprivation |
-| - Soil lead concentration | - Soil lead concentration |
-|                          | - House price median 2017-2021 |
-| **Method:**               | **Method:** **(avoids loss of information from discretization)** |
-| - construct deciles for each risk factor | - transform each variable to a uniform distribution |
-| - compute decile risk by taking average of deciles | - compute risk scores via average of values |
-| - recast risk back into deciles | - since risk variables are dependent, risk scores themselves will likely not be uniform -> re-transform to a uniform scale |
+| - % houses built pre 1973 <br> - Index of Multiple Deprivation <br> - Soil lead concentration | - % houses built pre 1954 <br> - Index of Multiple Deprivation <br> - Soil lead concentration <br> - House price median 2017-2021|
+| **Method:**               | **Method:** |
+| - construct deciles for each risk factor <br> - compute decile risk by taking average of deciles <br> - recast risk back into deciles | - transform each variable to a uniform distribution <br> - compute risk scores via average of values <br> - since risk variables are dependent, risk scores themselves will likely not be uniform -> re-transform to a uniform scale |
+| **Result**:              | **Result**: |
+| - discrete 1-10 risk score <br> - loss of information from binning <br> - single value for Leeds  | - continuous risk score on [0,1] <br> - uses all information from risk factors <br> - relative risk score for each MSOA |
+
+
+: Creating a hazard map {.striped .hover}
 
 
 ## Risk map
@@ -473,7 +479,7 @@ fig.show()
 
 The MSOAs with the highest risk scores are located in the **north/north-eastern belt** around the center of Leeds.
 
-## Risk comparison with ?Oxford
+## Comparison of UK-wide risk scores
 
 ```{python}
 #| label: risk-comparison
